--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/chat.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     },
     {
@@ -13,7 +13,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/chat.py"
+      "dest": "/api/index.py"
     },
     {
       "src": "/(.*)",
@@ -28,4 +28,5 @@
       "dest": "/frontend/script.js"
     }
   ]
+
 }
