--- a/package.json
+++ b/package.json
@@ -2,5 +2,7 @@
   "name": "neuraserve-ai",
   "version": "1.0.0",
   "description": "NeuraServe AI交互中枢",
-  "dependencies": {}
+  "scripts": {
+    "build": "echo 'Build successful'"
+  }
 }
