--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,16 @@
 [build]
   publish = "."
   functions = "netlify/functions"
+  command = "echo 'Build successful'"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 [[headers]]
   for = "/*"
   [headers.values]
     X-Frame-Options = "DENY"
     X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
