--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "neuraserve-ai",
   "version": "1.0.0",
-  "description": "NeuraServe AI交互中枢",
+  "description": "NeuraServe AI客服系统",
+  "main": "index.html",
+  "scripts": {
+    "test": "echo \"No test specified\" && exit 0"
+  },
   "dependencies": {
     "axios": "^1.6.0"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": ["ai", "chatbot", "neuraserve"],
+  "author": "NeuraServe",
+  "license": "MIT"
 }
